2010-10-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-cite.el (gnus-article-fill-cited-article): Remove unused `force'
	parameter.

	* shr.el (shr-find-fill-point): Don't break lines between punctuation
	and non-punctuation (like after the apostrophe in "'We").

	* gnus-sum.el (gnus-summary-select-article): Make sure
	gnus-original-article-buffer is alive.

	* nndoc.el (nndoc-dissect-buffer): Reverse the order of the articles to
	reflect the order they're in in the digest.

	* gnus.el (gnus-group-startup-message): Move point to the start of the
	buffer.

	* nnimap.el (nnimap-capability): New function.
	(nnimap-open-connection): Only send AUTHENTICATE PLAIN if LOGINDISABLED
	is set.

2010-10-31  David Engster  <dengste@eml.cc>

	* nnmairix.el (nnmairix-get-valid-servers): Return list of strings to
	conform with changes to gnus-completing-read.

2010-10-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-img): Output "*" instead of "[img]".

2010-10-30  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el move defvar, defcustom around to keep file organized and keep
	byte-compiler quiet.
	(nnir-read-parms): accept search-engine as arg.
	(nnir-run-query): pass search-engine as arg.
	(nnir-search-engine): remove.

2010-10-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-generic): The text nodes should be text, not :text.

	* nnir.el (nnir-search-engine): Ressurect variable, since it's used
	later in the file.

2010-10-30  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el: general clean up. allow searching with multiple
	engines. allow separate extra-parameters for each engine. batch queries
	when possible.
	(nnir-imap-default-search-key,nnir-method-default-engines): add
	customize interface.
	(nnir-run-gmane): new engine.
	(nnir-engines): use it. qualify all prompts with engine name.
	(nnir-search-engine): remove global variable.
	(nnir-run-hyrex): restore for now.
	(nnir-extra-parms,nnir-search-history): new variables.